08-30-2015:
            v1.1.1 released
            Updated interface for generating reports

08-24-2015:
            v1.1.0 released
            Fixed tab order in UI
            Moved locales into database

08-22-2015:
            v0.2.0 released
            Added exporting report functionality

06-02-2015:
            v0.1.0 released