@@ -1,3 +1,7 @@
+09-11-2015:
+            v1.1.2 released
+            Reports can be generated using a custom template
+
 08-30-2015:
             v1.1.1 released
             Updated interface for generating reports
